package com.packages.entity.collectible;
import com.packages.entity.Entity;

public abstract class Collectible extends Entity {
    public Collectible(int x, int y, int width, int height) {
        super(x, y, width, height);
    }
}