package com.packages.entity.movableEntity.player.competence;

public class Competence {
}
