package com.packages.entity.movableEntity.player.weapons;

public class Gun extends Weapons {
}
